Size section and cart section completed

--- a/vite-project/styles.css
+++ b/vite-project/styles.css
@@ -1,10 +1,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-#root{
-    height: 100vh;
-    position: relative;
-}
 .header-parent-container{
     background: #131921;
 }
@@ -34,6 +30,15 @@
 .parent-body-container{
     padding: 1em 0px 0px 2em;
 }
+.size-parent-container{
+    height:80vh;
+}
+.cart-parent-container{
+    height:80vh;
+}
+.contact-parent-container{
+    height:80vh;
+}
 @media only screen and (max-width:650px){
     .header-parent-container{
         flex-direction: column;
@@ -62,5 +67,58 @@
     }
     .product-parent-container{
         margin-top: 2em;
+    }
+    .size-parent-container{
+        flex-direction: column;
+        height:auto;
+    }
+    .Size-child-container{
+        margin-top: 2em;
+    }
+    .cart-parent-container{
+        flex-direction: column;
+        height:auto;
+    }
+    .contact-parent-container{
+        margin-top: 12em;
+        flex-direction: column;
+        height:auto;
+    }
+    .contact-child-container{
+        width: 75%;
+    }
+    .child-cart-container{
+        justify-content: center;
+        align-items: center;
+    }
+    .item-cart-container{
+        flex-direction: column;
+    }
+    .size-child-container{
+        margin-right: 1em;
+        margin-top: 2em;
+    }
+    body {
+        flex-direction: column;
+        min-height: 100vh;
+        position: relative;
+    }
+    .footer-container {
+        position: absolute;
+        bottom: 0;
+    }
+    .blank-space{
+        height: 100px;
+        width: 100%;
+    }
+}
+@media only screen and (min-width:760px){
+    #root{
+        min-height: 100vh;
+        position: relative;
+    }
+    .footer-container{
+        position: absolute;
+        bottom: 0;
     }
 }
